--- a/.github/workflows/test_nomad.yml
+++ b/.github/workflows/test_nomad.yml
@@ -17,6 +17,9 @@ jobs:
     runs-on: ${{matrix.os }}
     strategy:
       fail-fast: false
+      matrix:
+        os: [ubuntu-latest]
+        matlab: [latest]
 
     steps:
       - name: Check out repository
