--- a/.github/workflows/test_nomad.yml
+++ b/.github/workflows/test_nomad.yml
@@ -20,6 +20,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         matlab: [latest]
+        with_optim_toolbox: [yes]
 
     steps:
       - name: Check out repository
@@ -36,6 +37,20 @@ jobs:
       - name: Install cmake
         run: sudo apt-get update && sudo apt-get install cmake
 
+      - name: Cache MATLAB
+        id: cache-matlab
+        uses: actions/cache@v3.3.1
+        with:
+          path: ${{ runner.tool_cache }}/MATLAB
+          key: ${{ matrix.os }}-${{ matrix.matlab }}-${{ matrix.with_optim_toolbox }}
+      
+      - name: Set up MATLAB with optimization toolbox
+        if: ${{ matrix.with_optim_toolbox == 'yes' }}
+        uses: matlab-actions/setup-matlab@v2-beta
+        with:
+          release: ${{ matrix.matlab }}
+          products: Optimization_Toolbox    
+
       - name: Configuration
         run: cd ./nomad && cmake -DTEST_OPENMP=OFF -DBUILD_INTERFACE_MATLAB=ON -DBUILD_INTERFACE_PYTHON=ON -S . -B build/release
 
@@ -44,20 +59,6 @@ jobs:
 
       - name: Install
         run: cmake --install build/release       
-
-      - name: Cache MATLAB
-        id: cache-matlab
-        uses: actions/cache@v3.3.1
-        with:
-          path: ${{ runner.tool_cache }}/MATLAB
-          key: ${{ matrix.os }}-${{ matrix.matlab }}-${{ matrix.with_optim_toolbox }}
-
-      - name: Set up MATLAB with optimization toolbox
-        if: ${{ matrix.with_optim_toolbox == 'yes' }}
-        uses: matlab-actions/setup-matlab@v2-beta
-        with:
-          release: ${{ matrix.matlab }}
-          products: Optimization_Toolbox
 
       - name: Run test
         uses: matlab-actions/run-command@v1.2.0
