--- a/.github/workflows/test_nomad.yml
+++ b/.github/workflows/test_nomad.yml
@@ -52,7 +52,7 @@ jobs:
           products: Optimization_Toolbox    
 
       - name: Configuration
-        run: cd ./nomad && cmake -DTEST_OPENMP=OFF -DBUILD_INTERFACE_MATLAB=ON -DBUILD_INTERFACE_PYTHON=ON -S . -B build/release
+        run: cd ./nomad && cmake -DTEST_OPENMP=OFF -DBUILD_INTERFACE_MATLAB=ON -S . -B build/release
 
       - name: Build
         run: cd ./nomad && cmake --build build/release
