Change the directory correctly when running test

--- a/.github/workflows/test_nomad.yml
+++ b/.github/workflows/test_nomad.yml
@@ -64,11 +64,12 @@ jobs:
         uses: matlab-actions/run-command@v1.2.0
         with:
           command:
+            cd ./nomad
             cd(./interfaces/Matlab_MEX);
             test_nomad_gerad
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3.1.2
         with:
-          name: test_bds_small
+          name: test_nomad_gerad
           path: ./tests/testdata
