--- a/.github/workflows/test_nomad.yml
+++ b/.github/workflows/test_nomad.yml
@@ -64,8 +64,7 @@ jobs:
         uses: matlab-actions/run-command@v1.2.0
         with:
           command:
-            cd ./nomad
-            cd(./interfaces/Matlab_MEX);
+            cd(./nomad/interfaces/Matlab_MEX);
             test_nomad_gerad
 
       - name: Upload artifact
